@@ -3515,7 +3515,7 @@ void RegisterTests_Misc(ImGuiTestEngine* e)
     };
 #endif
 
-    // ## Test ErrorCheckEndFrameRecover()
+    // ## Test ErrorCheckEndFrameRecover(), ErrorCheckEndWindowRecover()
     t = IM_REGISTER_TEST(e, "misc", "misc_recover");
     t->Flags |= ImGuiTestFlags_NoRecoveryWarnings;
     t->GuiFunc = [](ImGuiTestContext* ctx)
