@@ -5,6 +5,10 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2024/02/22:
+- TestEngine: fixed MenuCheckAll(), MenuUncheckAll(), MenuActionAll() from trying to
+  perform actions on disabled menu items.
+
 2024/02/07:
 - TestEngine: fixed ImBuildFindGitBranchName() helper and auto-filling of io.GitBranchName
   when using a detached head. (#42)
